--- a/.fonts.conf
+++ b/.fonts.conf
@@ -1,4 +1,7 @@
 <?xml version="1.0"?>
+<!-- Note: you may need to copy this file to 
+/etc/fonts/conf.avail/64-language-selector-prefer.conf to take effect systemwide
+-->
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
 	<alias>
@@ -27,6 +30,7 @@
 	<alias>
 		<family>monospace</family>
 		<prefer>
+			<family>Maple Mono SC NF</family>
 			<family>Noto Sans Mono CJK SC</family>
 			<family>Noto Sans Mono CJK JP</family>
 			<family>Noto Sans Mono CJK KR</family>
@@ -35,3 +39,4 @@
 		</prefer>
 	</alias>
 </fontconfig>
+
